--- a/Views/KeybindWindow.xaml
+++ b/Views/KeybindWindow.xaml
@@ -4,10 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TAC_COM.Views"
+             xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:KeybindWindowViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="200"
-             MinHeight="100" MinWidth="200"
-             ResizeMode="NoResize">
+             Height="150" Width="250"
+             ResizeMode="NoResize"
+             Topmost="True">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -23,5 +26,18 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
+
+        <StackPanel Grid.Column="2" Grid.Row="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <TextBlock>
+                PRESS NEW KEYBIND
+            </TextBlock>
+            <Label Content="{Binding NewKeybindName}"/>
+            <Button Command="{Binding CloseKeybindDialog}">
+                CONFIRM
+            </Button>
+        </StackPanel>
+
     </Grid>
 </Window>
