--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,4 +16,7 @@
     <Grid>
         <views:AudioInterfaceView DataContext="{Binding CurrentViewModel}"/>
     </Grid>
+    <Window.Style>
+        <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
+    </Window.Style>
 </Window>
