--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,22 +1,25 @@
-﻿<Window x:Class="TAC_COM.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TAC_COM"
-        xmlns:views="clr-namespace:TAC_COM.Views" 
-        xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
-        mc:Ignorable="d" FontSize="18"
-        Height="350" Width="700"
-        MinHeight="350" MinWidth="700"
-        ResizeMode="CanMinimize">
+﻿<adonisControls:AdonisWindow x:Class="TAC_COM.MainWindow"
+                             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                             xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
+                             xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
+                             xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
+                             xmlns:local="clr-namespace:TAC_COM"
+                             xmlns:views="clr-namespace:TAC_COM.Views" 
+                             xmlns:viewmodels="clr-namespace:TAC_COM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
+                             mc:Ignorable="d"
+                             Title="TAC/COM"
+                             Height="350" Width="700" MinHeight="350" MinWidth="700"
+                             TitleBarForeground="White" TitleBarBackground="#FFA90000"
+                             BorderThickness="1" BorderBrush="#FFA90000"
+                             ResizeMode="CanMinimize">
     <Window.Icon>
         <DrawingImage/>
     </Window.Icon>
     <Grid>
         <views:AudioInterfaceView DataContext="{Binding CurrentViewModel}"/>
     </Grid>
-    <Window.Style>
-        <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
-    </Window.Style>
-</Window>
+
+</adonisControls:AdonisWindow>
