--- a/Views/AudioInterfaceView.xaml
+++ b/Views/AudioInterfaceView.xaml
@@ -28,26 +28,25 @@
         <StackPanel Grid.Column="2" Grid.Row="4" Background="White" 
                     HorizontalAlignment="Center" VerticalAlignment="Center" Width="Auto" Height="Auto">
 
-            <StackPanel Width="380" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="5">
                 <Label HorizontalAlignment="Stretch" VerticalAlignment="Center" FontSize="16">
-                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal">
                         INPUT
                     </TextBlock>
                 </Label>
 
-                <ComboBox x:Name="InputSelection" Width="280" 
+                <ComboBox x:Name="InputSelection" Width="300" 
                           ItemsSource="{Binding AllInputDevices}"
                           SelectedItem="{Binding InputDevice}"
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT INPUT DEVICE" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
                           VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <ComboBox.Background>
-                        <LinearGradientBrush EndPoint="0,1">
-                            <GradientStop Color="#FFF0F0F0"/>
-                            <GradientStop Color="#FFBDB6B6" Offset="1"/>
-                        </LinearGradientBrush>
-                    </ComboBox.Background>
+                    <ComboBox.ItemContainerStyle>
+                        <Style TargetType="ComboBoxItem">
+                            <Setter Property="MaxWidth" Value="280"/>
+                        </Style>
+                    </ComboBox.ItemContainerStyle>
                 </ComboBox>
 
                 <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical" Height="20" Width="4" Margin="10, 0, 0, 0"
@@ -56,26 +55,25 @@
                              Value="{Binding AudioManager.InputPeakMeter}"/>
             </StackPanel>
 
-            <StackPanel Width="380" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="5">
                 <Label HorizontalAlignment="Stretch" VerticalAlignment="Center" FontSize="16">
-                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal">
                         OUTPUT
                     </TextBlock>
                 </Label>
 
-                <ComboBox x:Name="OutputSelection" Width="280"
+                <ComboBox x:Name="OutputSelection" Width="300"
                           ItemsSource="{Binding AllOutputDevices}"
                           SelectedItem="{Binding OutputDevice}"
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT VIRTUAL OUTPUT DEVICE" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
                           VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <ComboBox.Background>
-                        <LinearGradientBrush EndPoint="0,1">
-                            <GradientStop Color="#FFF0F0F0"/>
-                            <GradientStop Color="#FFBDB6B6" Offset="1"/>
-                        </LinearGradientBrush>
-                    </ComboBox.Background>
+                    <ComboBox.ItemContainerStyle>
+                        <Style TargetType="ComboBoxItem">
+                            <Setter Property="MaxWidth" Value="280"/>
+                        </Style>
+                    </ComboBox.ItemContainerStyle>
                 </ComboBox>
 
                 <ProgressBar Grid.Column="2" Grid.Row="4" Orientation="Vertical" Height="20" Width="4" Margin="10, 0, 0, 0"
@@ -84,42 +82,44 @@
                              Value="{Binding AudioManager.OutputPeakMeter}"/>
             </StackPanel>
 
-            <StackPanel Width="380" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="5">
                 <Label HorizontalAlignment="Stretch" VerticalAlignment="Center" FontSize="16">
-                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal">
                         PROFILE
                     </TextBlock>
                 </Label>
 
-                <ComboBox x:Name="ProfileSelection" Width="280"
+                <ComboBox x:Name="ProfileSelection" Width="300"
                           ItemsSource="{Binding Profiles}"
                           SelectedItem="{Binding ActiveProfile}"
                           IsEnabled="{Binding IsSelectable}"
                           Text="SELECT MANUFACTURER" FontFamily="Calibri" FontSize="14"
                           IsReadOnly="True" IsEditable="True" 
                           VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <ComboBox.Background>
-                        <LinearGradientBrush EndPoint="0,1">
-                            <GradientStop Color="#FFF0F0F0"/>
-                            <GradientStop Color="#FFBDB6B6" Offset="1"/>
-                        </LinearGradientBrush>
-                    </ComboBox.Background>
+                    <ComboBox.ItemContainerStyle>
+                        <Style TargetType="ComboBoxItem">
+                            <Setter Property="MaxWidth" Value="280"/>
+                        </Style>
+                    </ComboBox.ItemContainerStyle>
                 </ComboBox>
             </StackPanel>
 
-            <StackPanel Width="380" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Width="400" VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal" Margin="5">
                 <Label HorizontalAlignment="Stretch" VerticalAlignment="Center" FontSize="16">
-                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock TextAlignment="Left" TextWrapping="WrapWithOverflow" Foreground="#FFA90000" Width="70" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal">
                         PTT KEY
                     </TextBlock>
                 </Label>
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                    <Label DockPanel.Dock="Left" VerticalAlignment="Center"
-                               Width="230" IsEnabled="{Binding IsSelectable}" Content="{Binding KeybindName}"/>
-                    <Button DockPanel.Dock="Right" Width="50" Height="20"
+                    <Label DockPanel.Dock="Left" VerticalAlignment="Center" VerticalContentAlignment="Center"
+                           FontWeight="Normal"
+                           Width="250" Height="20" IsEnabled="{Binding IsSelectable}" Content="{Binding KeybindName}"/>
+                    <Button DockPanel.Dock="Right" Width="50" Height="20" 
+                            HorizontalAlignment="Center" VerticalAlignment="Center" 
+                            HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
                             Foreground="White" Background="#FFBB0000" BorderThickness="0" Cursor="Hand"
-                            IsEnabled="{Binding IsSelectable}" Command="{Binding ShowKeybindDialog}">
+                            IsEnabled="{Binding IsSelectable}" Command="{Binding ShowKeybindDialog}" FontSize="10">
                         EDIT
                     </Button>
                 </StackPanel>
@@ -188,7 +188,7 @@
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10, 0, 0">
 
                 <StackPanel Orientation="Vertical" Width="240">
-                    <Label x:Name="GateThreshold" Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label x:Name="GateThreshold" Content="NOISE GATE THRESHOLD" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal"/>
                     <Label Content="{Binding AudioManager.NoiseGateThresholdString}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                           Background="Transparent">
@@ -202,7 +202,7 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical" Width="240">
-                    <Label Content="OUTPUT LEVEL" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="OUTPUT LEVEL" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal"/>
                     <Label Content="{Binding AudioManager.OutputGainLevelString}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                                 Background="Transparent">
@@ -215,7 +215,7 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical" Width="240">
-                    <Label Content="INTERFERENCE" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Label Content="INTERFERENCE" FontSize="14" HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Normal"/>
                     <Label Content="{Binding AudioManager.NoiseLevelString}" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Height="40"
                                 Background="Transparent">
