--- a/App.xaml
+++ b/App.xaml
@@ -9,6 +9,38 @@
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
                 <ResourceDictionary Source="Resources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <!-- Override colours -->
+
+            <!--Dropdown box border -->
+            <!--Progress bar fill-->
+            <!--Label text-->
+            <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#ff0000</Color>
+
+            <!--Basic text-->
+            <Color x:Key="{x:Static adonisUi:Colors.ForegroundColor}">#000000</Color>
+
+            <!--Button interaction text-->
+            <Color x:Key="{x:Static adonisUi:Colors.AccentForegroundColor}">#ffa90000</Color>
+
+            <!--Minimise button hover colour-->
+            <Color x:Key="{x:Static adonisUi:Colors.WindowButtonHighlightColor}">#ff0000</Color>
+
+            
+            <Color x:Key="{x:Static adonisUi:Colors.WindowButtonInteractionColor}">#ffa90000</Color>
+
+            <!--Background-->
+            <Color x:Key="{x:Static adonisUi:Colors.Layer0BackgroundColor}">#ffffff</Color>
+
+            <!--Inactive dropdown menu background-->
+            <!--Sliders-->
+            <Color x:Key="{x:Static adonisUi:Colors.Layer1BackgroundColor}">#ffefefef</Color>
+
+            <!--Enable/disable buttons-->
+            <Color x:Key="{x:Static adonisUi:Colors.Layer2BackgroundColor}">#ff730000</Color>
+            <Color x:Key="{x:Static adonisUi:Colors.Layer2HighlightColor}">#ffBB0000</Color>
+            <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#ff560404</Color>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
