Update button styling

--- a/App.xaml
+++ b/App.xaml
@@ -39,7 +39,7 @@
             <!--Enable/disable/edit buttons-->
             <Color x:Key="{x:Static adonisUi:Colors.Layer2BackgroundColor}">#ff730000</Color>
             <Color x:Key="{x:Static adonisUi:Colors.Layer2HighlightColor}">#ffBB0000</Color>
-            <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#ff560404</Color>
+            <Color x:Key="{x:Static adonisUi:Colors.Layer2BorderColor}">#ff0000</Color>
             <Color x:Key="{x:Static adonisUi:Colors.Layer2IntenseHighlightColor}">#ffffff</Color>
 
         </ResourceDictionary>
